# epd-waveshare

./: Cargo.toml
src/: color.rs  graphics.rs  interface.rs  lib.rs
src/epd7in5_yrd0750ryf665f60/: command.rs  mod.rs
src/epd_simulator/: mod.rs
